# python-jyutping

./: .gitignore  MANIFEST.in  README  README.rst  build.sh  pyproject.toml  setup.py
jyutping/: __init__.py  dictionary.py  jyutping.py  logger.py
pyjyutping/: __init__.py  dictionary.py  jyutping.py
src/jyutping/: dictionary.py  jyutping.py  online.py
